Fixed spacing

--- a/planets.css
+++ b/planets.css
@@ -12,6 +12,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 40px;
+	width: 100%;
 }
 
 h1 {
